@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/19/2011
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.0.1
+.\"    Source: \ \& 1.0.2-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "03/19/2011" "\ \& 1\&.0\&.1\" "\ \&"
+.TH "MCABBER" "1" "03/19/2011" "\ \& 1\&.0\&.2\-dev\" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
